fix left align on Win

--- a/style.css
+++ b/style.css
@@ -392,7 +392,7 @@ select {
   background-repeat: no-repeat;
   background-size: auto 50%;
   border-radius: 5px;
-  text-align: center;
+  text-align: left;
   border: none;
   color: #000;
   padding: 0.5vh 0.5vw;
